# DILAB-MOT

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/papers/: sort.yaml
docs/: benchmark_protocol.md  project_principles.md
motlab/: __init__.py
reports/weekly/: snapshot_template.md
src/motlab/: __init__.py
src/motlab/app/: __init__.py  cli_main.py
src/motlab/core/: __init__.py  config.py  experiment_runner.py  registry.py  types.py
src/motlab/datasets/: __init__.py  motchallenge.py
src/motlab/detectors/: __init__.py  mot_public_detection.py
src/motlab/evaluation/: __init__.py  mot_format.py  trackeval_layout.py  trackeval_runner.py  trackeval_setup.py
src/motlab/pipelines/: __init__.py  sort_mot_pipeline.py
src/motlab/trackers/: __init__.py
src/motlab/trackers/sort/: __init__.py  association.py  box_conversion.py  iou.py  kalman.py  track.py  tracker.py
src/motlab/visualization/: __init__.py
tests/: test_cli.py  test_config_loader.py  test_environment.py  test_experiment_runner.py  test_mot_format.py  test_mot_public_detection.py  test_motchallenge_sequence.py  test_registry.py  test_sort_association.py  test_sort_box_conversion.py  test_sort_iou.py  test_sort_kalman.py  test_sort_mot_pipeline.py  test_sort_sequence_evaluation.py  test_sort_track.py  test_sort_tracker.py  test_trackeval_layout.py  test_trackeval_runner.py  test_trackeval_setup.py  test_types.py
tests/fixtures/mot/: det.txt  det_with_gap.txt
